@@ -14,6 +14,7 @@ This release includes the following changes:
 This release includes the following bugfixes:
 
  o crash on bad socket close with FTP
+ o leaking cookie memory when duplicate domains or paths were used
 
 This release includes the following known bugs:
 
